--- a/museuapp/templates/base.html
+++ b/museuapp/templates/base.html
@@ -11,7 +11,43 @@
     <title>{% block title %}Nome do meu App{% endblock title %}</title>
 </head>
 <body>
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Nome do meu App</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarsExample05">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown05">
+                        <a class="dropdown-item" href="#">Clientes</a>
+                        <a class="dropdown-item" href="{% url 'orders:list_orders' %}">Pedidos</a>
+                        <a class="dropdown-item" href="#">Produtos</a>
+                        <a class="dropdown-item" href="{% url 'clients:list_clients' %}">Clientes</a>
+                        <a class="dropdown-item" href="#">Pedidos</a>
+                        <a class="dropdown-item" href="{% url 'products:list_products' %}">Produtos</a>
+                        <a class="dropdown-item" href="{% url 'categories:list_categories' %}">Categorias</a>
+                        <a class="dropdown-item" href="{% url 'socialnetworks:add_socialnetwork' %}">Redes Sociais</a>
+                    </div>
+                </li>
+            </ul>
+            <form action="{% url 'clients:search_clients' %}" method="GET" class="form-inline my-2 my-md-0" style="margin-right: 10px">
+                <input class="form-control" name="query" type="text" placeholder="Sobrenome do cliente" aria-label="Buscar" style="margin-right: 10px">
+                <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Buscar</button>
+            </form>
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nome de usuario</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown05">
+                            <a class="dropdown-item" href="#">Trocar senha</a>
+                            <a class="dropdown-item" href="#">Conta</a>                            
+                            <a class="dropdown-item" href="#">Sair</a>
+                        </div>
+                    </li>
+                </ul>
+        </div>
+    </nav>
     {% block body %}
     
     {% endblock body %}
