--- a/museuapp/templates/base.html
+++ b/museuapp/templates/base.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>{% block title %}Nome do meu App{% endblock title %}</title>
+    <title>{% block title %}Museuapp{% endblock title %}</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Nome do meu App</a>
+        <a class="navbar-brand" href="/">Museuapp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,21 +21,14 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown05">
-                        <a class="dropdown-item" href="#">Clientes</a>
-                        <a class="dropdown-item" href="{% url 'orders:list_orders' %}">Pedidos</a>
-                        <a class="dropdown-item" href="#">Produtos</a>
-                        <a class="dropdown-item" href="{% url 'clients:list_clients' %}">Clientes</a>
-                        <a class="dropdown-item" href="#">Pedidos</a>
-                        <a class="dropdown-item" href="{% url 'products:list_products' %}">Produtos</a>
-                        <a class="dropdown-item" href="{% url 'categories:list_categories' %}">Categorias</a>
-                        <a class="dropdown-item" href="{% url 'socialnetworks:add_socialnetwork' %}">Redes Sociais</a>
+                       
+                        <a class="dropdown-item" href="{% url 'arte:list_arte' %}">Arte</a>
+                        
+                        <a href="{% url 'arte:add_arte' %}">Cadastro de novo arte</a>
                     </div>
                 </li>
             </ul>
-            <form action="{% url 'clients:search_clients' %}" method="GET" class="form-inline my-2 my-md-0" style="margin-right: 10px">
-                <input class="form-control" name="query" type="text" placeholder="Sobrenome do cliente" aria-label="Buscar" style="margin-right: 10px">
-                <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Buscar</button>
-            </form>
+            
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nome de usuario</a>
