--- a/museuapp/templates/arte/list_arte.html
+++ b/museuapp/templates/arte/list_arte.html
@@ -14,15 +14,15 @@
         <div class="row">
             <div class ="col-md-12">
                 <br />
-                    <a href="{% url 'arte:add_arte' %}">Cadastro de nova arte</a>
+                    <a href="{% url 'arte:add_arte' %}">Cadastro de nova arte</a>   
                 <br />
                 <br />
                 <table class="table table-hover">
                 <thead>
                     <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Descricao</th>
+                    <th scope="col">Nome Artista</th>
+                    <th scope="col">Tipo Arte</th>
                     <th scope="col"></th>
                     <th scope="col"></th>
                     </tr>
@@ -34,8 +34,9 @@
                             <td>{{ arte.name }}</td>
                             <td>{{ arte.description }}</td>
                             <td>
-                                <a href="{% url 'arte:edit_arte' arte.id %}" class="btn btn-primary btn-sm">Editar</a>
+                               
                             </td>
+                             
                             <td>
                                 <a href="{% url 'arte:delete_arte' arte.id %}" class="btn btn-danger btn-sm ">Excluir</a>
                             </td>
