--- a/museuapp/templates/base.html
+++ b/museuapp/templates/base.html
@@ -28,7 +28,10 @@
                     </div>
                 </li>
             </ul>
-            
+            <form action="#" method="GET" class="form-inline my-2 my-md-0" style="margin-right: 10px">
+                <input class="form-control" name="query" type="text" aria-label="Buscar" style="margin-right: 10px">
+                <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Buscar</button>
+            </form>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nome de usuario</a>
@@ -40,7 +43,11 @@
                     </li>
                 </ul>
         </div>
+
+       
     </nav>
+
+    
     {% block body %}
     
     {% endblock body %}
