criando-classe-artistas-parte-2

--- a/museuapp/templates/base.html
+++ b/museuapp/templates/base.html
@@ -21,10 +21,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown05">
-                       
                         <a class="dropdown-item" href="{% url 'arte:list_arte' %}">Arte</a>
-                        
-                        <a href="{% url 'arte:add_arte' %}">Cadastro de novo arte</a>
+                        <a class="dropdown-item" href="{% url 'artistas:list_artistas' %}">Artistas</a>
                     </div>
                 </li>
             </ul>
