--- a/museuapp/templates/base.html
+++ b/museuapp/templates/base.html
@@ -23,6 +23,7 @@
                     <div class="dropdown-menu" aria-labelledby="dropdown05">
                         <a class="dropdown-item" href="{% url 'artes:list_artes' %}">Artes</a>
                         <a class="dropdown-item" href="{% url 'artistas:list_artistas' %}">Artistas</a>
+                        <a class="dropdown-item" href="{% url 'entidades:list_entidades' %}">Entidades</a>
                     </div>
                 </li>
             </ul>
