--- a/museuapp/templates/base.html
+++ b/museuapp/templates/base.html
@@ -24,6 +24,7 @@
                         <a class="dropdown-item" href="{% url 'artes:list_artes' %}">Artes</a>
                         <a class="dropdown-item" href="{% url 'artistas:list_artistas' %}">Artistas</a>
                         <a class="dropdown-item" href="{% url 'entidades:list_entidades' %}">Entidades</a>
+                        <a class="dropdown-item" href="{% url 'clientes:list_clientes' %}">Clientes</a>
                     </div>
                 </li>
             </ul>
