--- a/museuapp/templates/artes/add_arte.html
+++ b/museuapp/templates/artes/add_arte.html
@@ -18,11 +18,11 @@
                 <form action="" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                   <label for="{{ form.name.id_for_label }}">Arte</label>
+                   <label for="{{ form.name.id_for_label }}">Tipo de arte</label>
                    {{ form.name|add_class:"form-control" }}
                 </div>
                 <div class="form-group">
-                    <label for="{{ form.description.id_for_label }}">Descricao</label>
+                    <label for="{{ form.description.id_for_label }}">Nome do artista</label>
                     {{ form.description|add_class:"form-control" }}
                  </div>
                     <button type="submit" class="btn btn-primary">Salvar</button>       
