--- a/museuapp/templates/base.html
+++ b/museuapp/templates/base.html
@@ -25,6 +25,7 @@
                         <a class="dropdown-item" href="{% url 'artistas:list_artistas' %}">Artistas</a>
                         <a class="dropdown-item" href="{% url 'entidades:list_entidades' %}">Entidades</a>
                         <a class="dropdown-item" href="{% url 'clientes:list_clientes' %}">Clientes</a>
+                        <a class="dropdown-item" href="{% url 'itens:list_itens' %}">Itens</a>
                     </div>
                 </li>
             </ul>
