--- a/museuapp/templates/base.html
+++ b/museuapp/templates/base.html
@@ -26,6 +26,7 @@
                         <a class="dropdown-item" href="{% url 'entidades:list_entidades' %}">Entidades</a>
                         <a class="dropdown-item" href="{% url 'clientes:list_clientes' %}">Clientes</a>
                         <a class="dropdown-item" href="{% url 'itens:list_itens' %}">Itens</a>
+                        <a class="dropdown-item" href="{% url 'compras:list_compras' %}">Compras</a>
                     </div>
                 </li>
             </ul>
