--- a/museuapp/templates/clientes/list_clientes.html
+++ b/museuapp/templates/clientes/list_clientes.html
@@ -21,8 +21,8 @@
                 <thead>
                     <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Nome Cliente</th>
-                    <th scope="col">Idade Cliente</th>
+                    <th scope="col">Email do Cliente</th>
+                    <th scope="col">Descrição das suas artes</th>
                     <th scope="col"></th>
                     <th scope="col"></th>
                     </tr>
