--- a/museuapp/templates/compras/list_compras.html
+++ b/museuapp/templates/compras/list_compras.html
@@ -21,8 +21,8 @@
                 <thead>
                     <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Nome do item comprado</th>
-                    <th scope="col">Preço comprado</th>
+                    <th scope="col">Nome do comprador</th>
+                    <th scope="col">Quantidade da Compra</th>
                     <th scope="col"></th>
                     <th scope="col"></th>
                     </tr>
