--- a/museuapp/templates/itens/list_itens.html
+++ b/museuapp/templates/itens/list_itens.html
@@ -21,8 +21,8 @@
                 <thead>
                     <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Nome Item</th>
-                    <th scope="col">Idade Item</th>
+                    <th scope="col">Preço do Item</th>
+                    <th scope="col">Descrição do Item</th>
                     <th scope="col"></th>
                     <th scope="col"></th>
                     </tr>
