--- a/museuapp/templates/itens/add_item.html
+++ b/museuapp/templates/itens/add_item.html
@@ -18,11 +18,11 @@
                 <form action="" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                   <label for="{{ form.name.id_for_label }}">Nome</label>
+                   <label for="{{ form.name.id_for_label }}">Preço</label>
                    {{ form.name|add_class:"form-control" }}
                 </div>
                 <div class="form-group">
-                    <label for="{{ form.description.id_for_label }}">Idade</label>
+                    <label for="{{ form.description.id_for_label }}">Descrição</label>
                     {{ form.description|add_class:"form-control" }}
                  </div>
                     <button type="submit" class="btn btn-primary">Salvar</button>       
